--- a/problems/87.scramble-string.md
+++ b/problems/87.scramble-string.md
@@ -77,7 +77,7 @@ s1 和 s2 由小写英文字母组成
 
 > 如果对上面如何构造树不懂的，可以看下我之前写的 [构造二叉树](https://lucifer.ren/blog/2020/02/08/%E6%9E%84%E9%80%A0%E4%BA%8C%E5%8F%89%E6%A0%91%E4%B8%93%E9%A2%98/)
 
-上面提到了互为扰乱字符串必然存在相同的字符种类和个数，因此当我们确定了 s1 的根节点的时候，s2 的根节点只有两种类型。因此 s2 要保证分割后两部分的大小分别和 s1 的两部分大小完全一样。也就是说：**我们没有必要枚举 s1 和 s2 的所有可能的根节点组合**（这种组合有 n ^ 2 种，其中 n 为 s1 和 s2 的长度），而是**仅仅枚举 s1 的割点**（这样只有 n 种）。
+上面提到了互为扰乱字符串必然存在相同的字符种类和个数，因此当我们确定了 s1 的根节点的时候，s2 的根节点只有两种类型。这是因为 s2 要保证分割后两部分的大小分别和 s1 的两部分大小完全一样。也就是说：**我们没有必要枚举 s1 和 s2 的所有可能的根节点组合**（这种组合有 n ^ 2 种，其中 n 为 s1 和 s2 的长度），而是**仅仅枚举 s1 的割点**（这样只有 n 种）。
 
 实际上，我们没有必要先构造树 t1 和 t2，再去判断**t1 是否可由 t2 经过翻转任意节点得到**。而是将两个步骤结合到一起进行。
 
