--- a/problems/220.contains-duplicate-iii.md
+++ b/problems/220.contains-duplicate-iii.md
@@ -41,15 +41,17 @@ https://leetcode-cn.com/problems/contains-duplicate-iii/
 
 这里我们介绍一种分桶的思想，其基本思想和桶排序是类似的。
 
-具体来说，我们可使用 t 个桶。将所有数除以 (t+1) 的结果**作为编号都存到一个哈希表中**，不难知道哈希表的大小为 t。如果两个数字的编号相同，那么意味着其绝对值差小于等于 t。
+具体来说，我们可使用 (t + 1) 个桶。将所有数除以 (t+1) 的结果**作为编号存到一个哈希表中**，不难知道哈希表的编号范围为 [0, t]，因此哈希表最大容量为 (t+1)。
 
-那么如果两个数字的编号不同，是否意味着其绝对值差大于 t 呢？也不一定，相邻编号也可能是绝对值差小于等于 t 。因此我们只需要检查以下三种情况即可。
+经过这样的处理，如果两个数字的编号相同，那么意味着其绝对值差小于等于 t。
+
+那么如果两个数字的编号不同，是否意味着其绝对值差大于 t 呢？也不一定，**相邻编号**也可能是绝对值差小于等于 t 。因此我们只需要检查以下三种情况即可。
 
 1. 当前编号
 2. 左边相邻的编号
 3. 右边相邻的编号
 
-另外由于题目限定是索引差小于等于 k，因此需要清除哈希表中过期的信息。
+另外由于题目限定是索引差小于等于 k，因此我们可以固定一个窗口大小为 k 的滑动窗口，每次都仅处理窗口内的元素，这样可以保证桶内的数任意两个数都满足**索引之差的绝对值小于等于 k**。 因此我们需要清除哈希表中过期（不在窗口内）的信息。
 
 ## 关键点
 
