--- a/problems/91.decode-ways.md
+++ b/problems/91.decode-ways.md
@@ -83,7 +83,7 @@ s 只包含数字，并且可以包含前导零。
 
 ## 代码
 
-代码支持： JS，CPP
+代码支持： JS， Python3，CPP
 
 JS Code:
 
@@ -114,6 +114,27 @@ var numDecodings = function (s) {
 
   return dp[dp.length - 1];
 };
+```
+
+Python3 Code:
+
+```py
+class Solution:
+    def numDecodings(self, s: str) -> int:
+        @lru_cache(None)
+        def dp(start):
+            if start == len(s):
+                return 1
+            if start > len(s):
+                return 0
+            if s[start] != "0":
+                if s[start : start + 2] <= "26":
+                    print(s[start : start + 2])
+                    return dp(start + 1) + dp(start + 2)
+                return dp(start + 1)
+            return 0
+
+        return dp(0)
 ```
 
 **复杂度分析**
