feat: 修改部分不通顺语句

--- a/problems/309.best-time-to-buy-and-sell-stock-with-cooldown.md
+++ b/problems/309.best-time-to-buy-and-sell-stock-with-cooldown.md
@@ -14,7 +14,7 @@ https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/
 示例:
 
 输入: [1,2,3,0,2]
-输出: 3 
+输出: 3
 解释: 对应的交易状态为: [买入, 卖出, 冷冻期, 买入, 卖出]
 
 ```
@@ -38,10 +38,9 @@ https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/
 
 - buy[i]表示第 i 天，且以 buy 结尾的最大利润
 - sell[i]表示第 i 天，且以 sell 结尾的最大利润
-- cooldown[i]表示第 i 天，且以 sell 结尾的最大利润
+- cooldown[i]表示第 i 天，且以`什么都不做`（cooldown）结尾的最大利润
 
-我们思考一下，其实 cooldown 这个状态数组似乎没有什么用，因此 cooldown 不会对`profit`产生
-任何影响。 我们可以进一步缩小为两种状态。
+我们思考一下，其实 cooldown 这个状态数组似乎没有什么用，因为 cooldown 不会对`profit`产生任何影响。 我们可以进一步缩小为两种状态。
 
 - buy[i] 表示第 i 天，且以 buy 或者 coolwown 结尾的最大利润
 - sell[i] 表示第 i 天，且以 sell 或者 cooldown 结尾的最大利润
@@ -50,9 +49,9 @@ https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/
 
 > 这个需要花点时间来理解
 
-```
-  buy[i] = Math.max(buy[i - 1], sell[i - 2] - prices[i]);
-  sell[i] = Math.max(sell[i - 1], buy[i - 1] + prices[i]);
+```js
+buy[i] = Math.max(buy[i - 1], sell[i - 2] - prices[i]);
+sell[i] = Math.max(sell[i - 1], buy[i - 1] + prices[i]);
 ```
 
 我们来分析一下，buy[i]对应第 i 的 action 只能是 buy 或者 cooldown。
