--- a/problems/50.pow-x-n.md
+++ b/problems/50.pow-x-n.md
@@ -74,7 +74,7 @@ class Solution:
 
 首先我们要知道：
 
-- 如果想要求 x ^ 4，那么我们可以求 (x^2)^2
+- 如果想要求 x ^ 4，那么我们可以这样求： (x^2)^2
 - 如果是奇数，会有一点不同。 比如 x ^ 5 就等价于 x \* (x^2)^2。
 
 > 当然 x ^ 5 可以等价于 (x ^ 2) ^ 2.5, 但是这不相当于直接调用了幂函数了么。对于整数，我们可以很方便的模拟，但是小数就不方便了。
@@ -110,11 +110,13 @@ class Solution:
 
 ### 思路
 
-上面的解法每次直接 myPow 都会调用两次自己。我们不从缓存计算角度，而是从减少这种调用的角度来优化。
+上面的解法每次直接 myPow 都会调用两次自己。
 
-我们考虑 myPow 只调用一次自身可以么？ 没错，是可以的。
+我们不从缓存计算角度，而是从减少这种调用的角度来优化。
 
-我们的思路就是：
+考虑 myPow 只调用一次自身可以么？ 没错，是可以的。
+
+具体来说就是：
 
 - 如果 n 是偶数，我们将 n 折半，底数变为 x^2
 - 如果 n 是奇数， 我们将 n 减去 1 ，底数不变，得到的结果再乘上底数 x
@@ -188,6 +190,8 @@ public:
 第一个问题是`似乎我们需要存储 x^i 以便后续相乘的时候用到`。实际上，我们并不需要这么做。我们可以采取一次遍历的方式来完成，具体看代码。
 
 第二个问题是，如果我们从低位到高位计算的时候，我们如何判断最高位置是否为 1？我们需要一个 bitmask 来完成，这种算法我们甚至需要借助一个额外的变量。 然而我们可以 hack 一下，直接从高位到低位进行计算，这个时候我们只需要判断最后一位是否为 1 就可以了，这个就简单了，我们直接和 1 进行一次`与运算`即可。
+
+如果上面这段话你觉得比较绕，也可以不用看了，直接看代码或许更快理解。
 
 ### 代码
 
