--- a/problems/331.verify-preorder-serialization-of-a-binary-tree.md
+++ b/problems/331.verify-preorder-serialization-of-a-binary-tree.md
@@ -81,7 +81,7 @@ https://leetcode-cn.com/problems/verify-preorder-serialization-of-a-binary-tree/
 
 Python3 Code:
 
-注意我最后判断的是 diff == -1 而不是 diff == 0，原因在于：比如对于空节点来说，入度和出度都是 0 才对，但是我的代码会计算入度为 1, 出度为 0。换句话说我代码利用了一个虚拟节点 dummy，dummy 直接指向了 root，其中 dummy 只有一个子节点，而不是两个。这点需要大家注意，并不是和思路对不上。
+注意我最后判断的是 diff == -1 而不是 diff == 0，原因在于我代码利用了一个虚拟节点 dummy，dummy 直接指向了 root，其中 dummy 只有一个子节点，而不是两个(但是代码算成两个了)。这点需要大家注意，并不是和思路对不上。
 
 ```python
 
