--- a/problems/714.best-time-to-buy-and-sell-stock-with-transaction-fee.md
+++ b/problems/714.best-time-to-buy-and-sell-stock-with-transaction-fee.md
@@ -91,6 +91,29 @@ class Solution:
 
 ```
 
+另一种写法的记忆化递归。
+
+f(i, state) 表示第 i 天（i 从 0 开始）以 state 的状态的最大利润。
+
+- state 为 0 表示当前没股票
+- state 为 1 表示当前有股票
+
+和上面不同的是，上面使用返回值表示不同状态，而这里是用参数表示不同状态。大家可以根据自己的喜好选择不同的写法。
+
+```py
+class Solution:
+    def maxProfit(self, prices: List[int], fee: int) -> int:
+        @lru_cache(None)
+        def dp(i, state):
+            if i == len(prices) - 1:
+                return prices[i] - fee if state == 1 else 0
+            if state == 1:
+                return max(dp(i + 1, 1), dp(i + 1, 0) + prices[i] - fee)
+            return max(dp(i + 1, 0), dp(i + 1, 1) - prices[i])
+
+        return dp(0, 0)
+```
+
 **复杂度分析**
 
 令 n 为数组长度。
