feat: 代码增加注释

--- a/problems/456.132-pattern.md
+++ b/problems/456.132-pattern.md
@@ -79,20 +79,19 @@ n == nums.length
 Python3 Code:
 
 ```python
-
 class Solution:
-    def find132pattern(self, nums: List[int]) -> bool:
-        s2, stack = float("-inf"), []
-
-        for i in range(len(nums) - 1, -1, -1):
-            if nums[i] < s2:
+    def find132pattern(self, A: List[int]) -> bool:
+        stack = []
+        p2 = float("-inf")
+        for a in A[::-1]:
+            # p2 不为初始值意味着我们已经找到了 32 模式，因此 a < p2 时候，我们就找到了 132 模式
+            if a < p2:
                 return True
-            while stack and stack[-1] < nums[i]:
-                s2 = stack.pop()
-            stack.append(nums[i])
+            while stack and a > stack[-1]:
+                p2 = stack.pop()
+            stack.append(a)
+
         return False
-
-
 ```
 
 **复杂度分析**
