--- a/problems/85.maximal-rectangle.md
+++ b/problems/85.maximal-rectangle.md
@@ -93,8 +93,9 @@ class Solution:
 - 时间复杂度：$O(M * N)$
 - 空间复杂度：$O(N)$
 
+## 相关题目
+
+- [42. 接雨水](https://github.com/azl397985856/leetcode/blob/master/problems/42.trapping-rain-water.md)
+- [84. 柱状图中最大的矩形](https://github.com/azl397985856/leetcode/blob/master/problems/84.largest-rectangle-in-histogram.md)
+
 以上就是本文的全部内容了。大家对此有何看法，欢迎给我留言，我有时间都会一一查看回答。更多算法套路可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 38K star 啦。大家也可以关注我的公众号《力扣加加》带你啃下算法这块硬骨头。
-
-```
-
-```
