--- a/problems/1737.change-minimum-characters-to-satisfy-one-of-three-conditions.md
+++ b/problems/1737.change-minimum-characters-to-satisfy-one-of-three-conditions.md
@@ -61,10 +61,10 @@ a 和 b 只由小写字母组成
         # 枚举 A 的最大字母
         for i in range(1, 26):
             t = 0
-            # 大于等于 i 的所有字符都需要进行一次操作
+            # A 中大于等于 i 的所有字符都需要进行一次操作
             for j in range(i, 26):
                 t += counter_A[j]
-            # 小于 i 的所有字符都需要进行一次操作
+            # B 中小于 i 的所有字符都需要进行一次操作
             for j in range(i):
                 t += counter_B[j]
             # 枚举的所有情况中取最小的
