--- a/problems/1261.find-elements-in-a-contaminated-binary-tree.md
+++ b/problems/1261.find-elements-in-a-contaminated-binary-tree.md
@@ -199,17 +199,22 @@ class FindElements:
 如果我们把树中的数全部加 1 会怎么样？
 
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1ghluaaphnnj30rs0kuwhb.jpg)
+
 （图参考 https://leetcode.com/problems/find-elements-in-a-contaminated-binary-tree/discuss/431229/Python-Special-Way-for-find()-without-HashSet-O(1)-Space-O(logn)-Time）
 
 仔细观察发现，每一行的左右子树分别有不同的前缀：
 
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1ghluackit8j312y0sgtdy.jpg)
 
-Ok，那么算法就来了。为了便于理解，我们来举个具体的例子，比如 target 是 9，我们首先将其加 1，二进制表示就是 1010。不考虑第一位，就是 010，我们只要：
+Ok，那么算法就来了，就是直接用 target 的二进制表示进行**二叉树寻路** 即可。
+
+为了便于理解，我们来举个具体的例子，比如 target 是 9，我们首先将其加 1，二进制表示就是 1010。不考虑第一位，就是 010。
+
+我们只要：
 
 - 0 向左 👈
 - 1 向右 👉
-- - 0 向左 👈
+- 0 向左 👈
 
 就可以找到 9 了。
 
