--- a/problems/1261.find-elements-in-a-contaminated-binary-tree.md
+++ b/problems/1261.find-elements-in-a-contaminated-binary-tree.md
@@ -206,7 +206,7 @@ class FindElements:
 
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1ghluackit8j312y0sgtdy.jpg)
 
-Ok，那么算法就来了，就是直接用 target 的二进制表示进行**二叉树寻路** 即可。
+Ok，那么算法就来了，就是直接用 **target + 1** 的二进制表示进行**二叉树寻路** 即可。
 
 为了便于理解，我们来举个具体的例子，比如 target 是 9，我们首先将其加 1，二进制表示就是 1010。不考虑第一位，就是 010。
 
