--- a/problems/754.reach-a-number.md
+++ b/problems/754.reach-a-number.md
@@ -57,8 +57,12 @@ target是在[-10^9, 10^9]范围中的非零整数。
 
 其实，只要找出第一个满足 1 + 2 + 3 + .... + steps > target 的 steps 即可。
 
-- 如果 steps 是偶数， 那么我们总可以找出若干数字使其变为符号，满足 1 + 2 + 3 + .... + steps == target
-- 如果 steps 是奇数， 1 + 2 + 3 + .... + steps + steps + 1 或者 1 + 2 + 3 + .... + steps + steps + 1 + steps + 2 中有且仅有一个是偶数。我们仍然可以套用上面的方法，找出若干数字使其变为符号，满足 1 + 2 + 3 + .... + steps + steps + 1 == target 或者 1 + 2 + 3 + .... + steps + steps + 1 + steps + 2 == target
+令 1 + 2 + 3 + .... + steps 为 T。接下来，我们来对不同情况进行分析。
+
+- 如果 T 等于 target，那么 steps 就是我们想求的值，直接返回即可。
+- 否则，我们尝试从 [1, steps] 这 steps 个数中找出几个数改成其符号，不难知道找的这几个数的和是 (T - target) / 2。
+  1. 如果 T 是偶数， 那么我们总可以找出若干数字使其变为符号，满足 1 + 2 + 3 + .... + steps == target，因此直接返回 steps 即可。
+  2. 如果 T 是奇数，(T - target) / 2 是个小数，肯定无法选取的，因此我们还需要在多选数，比如 steps + 1，steps + 2。 由于 T + steps + 1 和 T + steps + 1 + steps + 2 中有且仅有一个是偶数。我们仍然可以套用上面的方法，找出若干数字使其变为负号，满足 1 + 2 + 3 + .... + steps + steps + 1 == target 或者 1 + 2 + 3 + .... + steps + steps + 1 + steps + 2 == target。**也就是说在这种情况下答案就是 steps + 1 或者 steps + 2，具体是哪个取决于 T + steps + 1 是偶数还是 T + steps + 1 + steps + 2 是偶数**
 
 ## 关键点解析
 
@@ -84,6 +88,11 @@ class Solution(object):
 
 
 ```
+
+**复杂度分析**
+
+- 时间复杂度：$O($\sqrt target$)$
+- 空间复杂度：$O(1)$
 
 ## 相关题目
 
