--- a/problems/473.matchsticks-to-square.md
+++ b/problems/473.matchsticks-to-square.md
@@ -42,9 +42,11 @@ https://leetcode-cn.com/problems/matchsticks-to-square/
 
 ## 思路
 
-题目规定了**火柴数组的长度不超过 15**，基本就可以锁定为回溯题目。为什么？不清楚的可以看下我写的[这篇文章](https://lucifer.ren/blog/2020/12/21/shuati-silu3/)。
+题目规定了**火柴数组的长度不超过 15**，基本就可以锁定为回溯题目。
 
-这道题我们可以使用长度为 4 的 sides 数组存储已经排好的火柴的边的情况。显然，如果能找到一个令任意 sides[i] 都等于 side 的组合就返回 True，否则返回 False。其中 side 为火柴长度总和的四分之一。
+> 为什么？不清楚的可以看下我写的[这篇文章](https://lucifer.ren/blog/2020/12/21/shuati-silu3/)。
+
+这道题我们可以使用长度为 4 的 sides 数组存储已经排好的火柴的边的情况。显然，如果能找到一个`令任意 sides[i] 都等于 side` 的组合就返回 True，否则返回 False。其中 side 为火柴长度总和的四分之一。
 
 这提示我们使用回溯找到所有的 sides 的可行组合，从 sides[0] 开始枚举所有放置可能，接下来放置 sides[1] ...。
 
