--- a/problems/227.basic-calculator-ii.md
+++ b/problems/227.basic-calculator-ii.md
@@ -40,7 +40,9 @@ https://leetcode-cn.com/problems/basic-calculator-ii/
 
 - 暂无
 
-## 思路
+## 一个栈
+
+### 思路
 
 计算器的题目基本都和栈有关，这道题也不例外。
 
@@ -100,13 +102,13 @@ https://leetcode-cn.com/problems/basic-calculator-ii/
 
 为了简化判断， 我使用了两个哨兵。一个是 s 末尾的 $，另一个是最开始的 pre_flag。
 
-## 关键点解析
+### 关键点解析
 
 - 区分一目和二目运算符，并使用栈来简化操作
 - 记录 pre_flag，即上一次出现的操作符
 - 使用哨兵简化操作。一个是 s 的 $ ，另一个是 pre_flag 的 +
 
-## 代码
+### 代码
 
 代码支持：Python。
 
