--- a/problems/1899.merge-triplets-to-form-target-triplet.md
+++ b/problems/1899.merge-triplets-to-form-target-triplet.md
@@ -91,7 +91,7 @@ triplets[i].length == target.length == 3
 - cz >= triplets[0][2]
 - cz >= triplets[1][2]
 
-这样就有一个重要性质。 比如**当前的 max 结果是 (cx, cy, cz) 与 (x, y, z) 进行 max 操作，其中 x <= tx, y <= ty, z <= tz，一定不会比不 max 差，其中 (tx, ty, tz) 就是题目给的 target。**这样我们客气可以贪心地与其 max。如果最终 max 结果与 (tx, ty, tz) 相同，那么返回 True， 否则返回 False。
+这样就有一个重要性质。 比如 **当前的 max 结果是 (cx, cy, cz) 与 (x, y, z) 进行 max 操作，其中 x <= tx, y <= ty, z <= tz，一定不会比不 max 差，其中 (tx, ty, tz) 就是题目给的 target。** 这样我们可以贪心地与其进行 max 操作。如果最终 max 结果与 (tx, ty, tz) 相同，那么返回 True， 否则返回 False。
 
 ### 要点三
 
