--- a/problems/1899.merge-triplets-to-form-target-triplet.md
+++ b/problems/1899.merge-triplets-to-form-target-triplet.md
@@ -161,6 +161,12 @@ public:
 - 时间复杂度：$O(n)$
 - 空间复杂度：$O(1)$
 
+## 扩展
+
+如果题目的 max 操作改成二进制位的或操作，那么会有什么不一样呢？
+
+> 提示：或也具体单调递增性，本质和 max 操作差不多。
+
 > 此题解由 [力扣刷题插件](https://leetcode-pp.github.io/leetcode-cheat/?tab=solution-template) 自动生成。
 
 力扣的小伙伴可以[关注我](https://leetcode-cn.com/u/fe-lucifer/)，这样就会第一时间收到我的动态啦~
