--- a/problems/1899.merge-triplets-to-form-target-triplet.md
+++ b/problems/1899.merge-triplets-to-form-target-triplet.md
@@ -165,7 +165,7 @@ public:
 
 如果题目的 max 操作改成二进制位的或操作，那么会有什么不一样呢？
 
-> 提示：或也具体单调递增性，本质和 max 操作差不多。
+> 提示：或也具有单调递增性，本质和 max 操作差不多。
 
 > 此题解由 [力扣刷题插件](https://leetcode-pp.github.io/leetcode-cheat/?tab=solution-template) 自动生成。
 
