--- a/problems/1723.find-minimum-time-to-finish-all-jobs.md
+++ b/problems/1723.find-minimum-time-to-finish-all-jobs.md
@@ -58,7 +58,7 @@ https://leetcode-cn.com/problems/find-minimum-time-to-finish-all-jobs/
 
 需要注意的是**能力检测** 部分，我们需要枚举所有的情况，而不是像大多数能力检测二分那样直接一次遍历，这是因为这道题可以**不连续** 地选择多个 job。这提示我们使用回溯来解决。
 
-初始化一个长度为 k 的 workloads， workloads[i] 表示第 i 个功能目前的工时。如果第 i 个工人可以做，就**贪心地**进行选择。否则，我们尝试下一个 job。
+初始化一个长度为 k 的 workloads， workloads[i] 表示第 i 个工人👷目前的工时。如果第 i 个工人可以做，就**贪心地**进行选择。否则，我们尝试下一个 job。
 
 除此之外，我们需要对算法进行剪枝，否则无法通过所有的测试用例。
 
