--- a/problems/1723.find-minimum-time-to-finish-all-jobs.md
+++ b/problems/1723.find-minimum-time-to-finish-all-jobs.md
@@ -128,6 +128,8 @@ $$ -->
 
 ![](https://tva1.sinaimg.cn/large/008i3skNly1gs0a7pgkgaj30u204ejrs.jpg)
 
+其中 sum(sub) 指的是任务情况如 sub 二进制表示那样的完成的**总时间**。
+
 这里枚举子集可进行子集枚举优化策略，具体可看我的 91 天学算法的《基础篇 - 枚举》部分的讲义 。
 
 提示：
