--- a/problems/785.is-graph-bipartite.md
+++ b/problems/785.is-graph-bipartite.md
@@ -105,6 +105,25 @@ class Solution:
 - 时间复杂度：$O(N^2)$
 - 空间复杂度：$O(N)$
 
+
+如上代码并不优雅，之所以这么写只是为了体现和 886 题一致性。一个更加优雅的方式是不建立 grid，而是利用题目给的 graph（邻接矩阵）。
+
+```py
+class Solution:
+    def isBipartite(self, graph: List[List[int]]) -> bool:
+        n = len(graph)
+        colors = [0] * n
+        def dfs(i, color):
+            colors[i] = color
+            for neibor in graph[i]:
+                if colors[neibor] == color: return False
+                if colors[neibor] == 0 and not dfs(neibor,-1*color): return False
+            return True
+        for i in range(n):
+            if colors[i] == 0 and not dfs(i,1): return False
+        return True
+ ```
+
 ## 相关问题
 
 - [886. 可能的二分法](./886.possible-bipartition.md)
