--- a/problems/785.is-graph-bipartite.md
+++ b/problems/785.is-graph-bipartite.md
@@ -109,7 +109,7 @@ class Solution:
 令 v 和 e 为图中的顶点数和边数。
 
 - 时间复杂度：$O(v+e)$
-- 空间复杂度：$O(v+e)$
+- 空间复杂度：$O(v)$, stack depth = $O(v)$, and colors array.length = $O(v)$
 
 
 如上代码并不优雅，之所以这么写只是为了体现和 886 题一致性。一个更加优雅的方式是不建立 grid，而是利用题目给的 graph（邻接矩阵）。
