--- a/problems/785.is-graph-bipartite.md
+++ b/problems/785.is-graph-bipartite.md
@@ -137,6 +137,10 @@ class Solution:
 
 ### 代码
 
+代码支持：Python3，Java
+
+Python3 Code：
+
 ```py
 class UF:
     def __init__(self, n):
@@ -162,6 +166,8 @@ class Solution:
                 uf.union(graph[i][0], neibor)
         return True
 ```
+
+Java Code：
 
 ```java
 // weighted quick-union with path compression
