--- a/problems/437.path-sum-iii.md
+++ b/problems/437.path-sum-iii.md
@@ -112,7 +112,7 @@ var pathSum = function (root, sum) {
 
 ## 关键点解析
 
-- 通过 hashmap，以时间换空间
+- 通过 hashmap，以空间换时间
 - 对于这种连续的元素求和问题，有一个共同的思路，可以参考[这道题目](./560.subarray-sum-equals-k.md)
 
 ## 代码
