--- a/problems/212.word-search-ii.md
+++ b/problems/212.word-search-ii.md
@@ -62,7 +62,11 @@ words = ["oath","pea","eat","rain"] and board =
 
 刚才我提到了一个关键词“前缀”，我们考虑使用前缀树来优化。使得复杂度降低为$O(h)$, 其中 h 是前缀树深度，也就是最长的字符串长度。
 
+关于前缀树，可以参考我的[前缀树](../thinkings/trie.md) 专题。
+
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlua4m3ofj30mz0gqdhc.jpg)
+
+值得注意的是如果每次 dfs 都使用 startsWith 来判断，那么会超时。我们可以将当前遍历到的 trie 节点 以参数传递到 dfs 中，这样可以进一步减少复杂度。
 
 ## 关键点
 
@@ -79,77 +83,46 @@ Python3 Code：
 关于 Trie 的代码:
 
 ```python
+from collections import defaultdict
 class Trie:
-
     def __init__(self):
-        """
-        Initialize your data structure here.
-        """
-        self.Trie = {}
+        self.children = defaultdict(Trie)
+        self.word = ""
 
     def insert(self, word):
-        """
-        Inserts a word into the trie.
-        :type word: str
-        :rtype: void
-        """
-        curr = self.Trie
-        for w in word:
-            if w not in curr:
-                curr[w] = {}
-            curr = curr[w]
-        curr['#'] = 1
-
-    def startsWith(self, prefix):
-        """
-        Returns if there is any word in the trie that starts with the given prefix.
-        :type prefix: str
-        :rtype: bool
-        """
-
-        curr = self.Trie
-        for w in prefix:
-            if w not in curr:
-                return False
-            curr = curr[w]
-        return True
+        cur = self
+        for c in word:
+            cur = cur.children[c]
+        cur.word = word
 ```
 
 主逻辑代码：
 
 ```python
+
 class Solution:
     def findWords(self, board: List[List[str]], words: List[str]) -> List[str]:
-        m = len(board)
-        if m == 0:
-            return []
-        n = len(board[0])
+        def dfs(row, col, cur):
+            if row < 0 or row >= m or col < 0 or col >= n or board[row][col] == '.' or board[row][col] not in cur.children: return
+            c = board[row][col]
+            cur  = cur.children[c]
+            if cur.word != '': ans.add(cur.word)
+            board[row][col] = '.'
+            dfs(row+1,col, cur)
+            dfs(row-1,col, cur)
+            dfs(row,col+1, cur)
+            dfs(row,col-1, cur)
+            board[row][col] = c
+        m, n = len(board), len(board[0])
+        ans = set()
         trie = Trie()
-        seen = None
-        res = set()
+        words = set(words)
         for word in words:
             trie.insert(word)
-
-        def dfs(s, i, j):
-            if (i, j) in seen or i < 0 or i >= m or j < 0 or j >= n or not trie.startsWith(s):
-                return
-            s += board[i][j]
-            seen[(i, j)] = True
-
-            if s in words:
-                res.add(s)
-            dfs(s, i + 1, j)
-            dfs(s, i - 1, j)
-            dfs(s, i, j + 1)
-            dfs(s, i, j - 1)
-
-            del seen[(i, j)]
-
         for i in range(m):
             for j in range(n):
-                seen = dict()
-                dfs("", i, j)
-        return list(res)
+                dfs(i, j, trie)
+        return list(ans)
 ```
 
 ## 相关题目
