--- a/problems/335.self-crossing.md
+++ b/problems/335.self-crossing.md
@@ -51,7 +51,7 @@ https://leetcode-cn.com/problems/self-crossing/
 
 ## 思路
 
-符合直觉的做法是$O(N)$时间和$O(B)$空间复杂度的算法，其中 B 为障碍物的个数，也就是行走过程中经过的坐标点的个数。这种算法非常简单，关于空间复杂度为$O(N)$的算法可以参考我之前的[874.walking-robot-simulation](https://github.com/azl397985856/leetcode/blob/be15d243a3b93d7efa731d0589a54a63cbff61ae/problems/874.walking-robot-simulation.md)。 思路基本是类似，只不过 obstacles（障碍物）不是固定的，而是我们不断遍历的时候动态生成的，我们每遇到一个点，就将其标记为 obstacle。随着算法的进行，我们的 obstacles 逐渐增大，最终会增加到 $O(B)$。
+符合直觉的做法是$O(N)$时间和$O(B)$空间复杂度的算法，其中 B 为障碍物的个数，也就是行走过程中经过的坐标点的个数。这种算法非常简单，关于空间复杂度为$O(B)$的算法可以参考我之前的[874.walking-robot-simulation](https://github.com/azl397985856/leetcode/blob/be15d243a3b93d7efa731d0589a54a63cbff61ae/problems/874.walking-robot-simulation.md)。 思路基本是类似，只不过 obstacles（障碍物）不是固定的，而是我们不断遍历的时候动态生成的，我们每遇到一个点，就将其标记为 obstacle。随着算法的进行，我们的 obstacles 逐渐增大，最终会增加到 $O(B)$。
 
 但是题目要求我们使用空间复杂度为$O(1)$的做法。我们考虑进行优化。我们仔细观察发现，如果想让其不相交，从大的范围来看只有两种情况：
 
