--- a/problems/335.self-crossing.md
+++ b/problems/335.self-crossing.md
@@ -95,7 +95,7 @@ https://leetcode-cn.com/problems/self-crossing/
 1. 直接修改原数组
 2. 滚动数组（当前状态并不是和之前所有状态有关，而是仅和某几个有关）。
 
-我们采用的是滚动数组。如果你了解动态规划的滚动数组优化的话应该理解我的意思 。但是难点就在于我们怎么知道当前状态和哪几个有关。对于这道题来说，画图或许可以帮助你打开思路。另外面试的时候说出$O(N)$的思路也不失为一个帮助你冷静分析问题的手段。
+我们采用的是滚动数组。如果你了解动态规划的滚动数组优化的话应该理解我的意思 。但是难点就在于我们怎么知道当前状态和哪几个有关。对于这道题来说，画图或许可以帮助你打开思路。另外面试的时候说出$O(B)$的思路也不失为一个帮助你冷静分析问题的手段。
 
 ## 代码
 
