fix: 代码重复判断

--- a/problems/335.self-crossing.md
+++ b/problems/335.self-crossing.md
@@ -77,14 +77,15 @@ https://leetcode-cn.com/problems/self-crossing/
 
 ![](https://pic.leetcode-cn.com/1635437888-JuQzXp-007S8ZIlly1ghltxkbce9j30ro0o676d.jpg)
 
+> 图有误，第一种和第二种是同一种情况，换个角度看一样了。文字解释和代码已经更正
+
 这个时候代码就呼之欲出了。
 
 - 我们只需要遍历数组 x，假设当前是第 i 个元素。
 - 如果 x[i] >= x[i - 2] and x[i - 1] <= x[i - 3]，则相交（第一种情况）
-- 如果 x[i - 1] <= x[i - 3] and x[i - 2] <= x[i]，则相交（第二种情况）
-- 如果 i > 3 and x[i - 1] == x[i - 3] and x[i] + x[i - 4] == x[i - 2]，则相交（第三种情况）
+- 如果 i > 3 and x[i - 1] == x[i - 3] and x[i] + x[i - 4] == x[i - 2]，则相交（第二种情况）
 - 如果 i > 4 and x[i] + x[i - 4] >= x[i - 2] and x[i - 1] >= x[i - 3] - x[i - 5] \
-   and x[i - 1] <= x[i - 3] and x[i - 2] >= x[i - 4] and x[i - 3] >= x[i - 5] ，则相交（第四种情况）
+   and x[i - 1] <= x[i - 3] and x[i - 2] >= x[i - 4] and x[i - 3] >= x[i - 5] ，则相交（第三种情况）
 - 否则不相交
 
 ## 关键点解析
@@ -96,6 +97,8 @@ https://leetcode-cn.com/problems/self-crossing/
 2. 滚动数组（当前状态并不是和之前所有状态有关，而是仅和某几个有关）。
 
 我们采用的是滚动数组。如果你了解动态规划的滚动数组优化的话应该理解我的意思 。但是难点就在于我们怎么知道当前状态和哪几个有关。对于这道题来说，画图或许可以帮助你打开思路。另外面试的时候说出$O(B)$的思路也不失为一个帮助你冷静分析问题的手段。
+
+感谢 [@saberjiang-b](https://leetcode-cn.com/u/saberjiang-b/) 指出的代码重复判断问题
 
 ## 代码
 
@@ -111,8 +114,6 @@ class Solution:
             return False
         for i in range(3, n):
             if x[i] >= x[i - 2] and x[i - 1] <= x[i - 3]:
-                return True
-            if x[i - 1] <= x[i - 3] and x[i - 2] <= x[i]:
                 return True
             if i > 3 and x[i - 1] == x[i - 3] and x[i] + x[i - 4] == x[i - 2]:
                 return True
@@ -131,4 +132,6 @@ class Solution:
 
 大家对此有何看法，欢迎给我留言，我有时间都会一一查看回答。更多算法套路可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 45K star 啦。
 大家也可以关注我的公众号《力扣加加》带你啃下算法这块硬骨头。
+
+
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
