--- a/problems/169.majority-element.md
+++ b/problems/169.majority-element.md
@@ -37,13 +37,16 @@ https://leetcode-cn.com/problems/majority-element/
 
 ## 思路
 
-符合直觉的做法是利用额外的空间去记录每个元素出现的次数，并用一个单独的变量记录当前出现次数最多的元素。
+这个问题也被称为 **水王问题**。即让我们求数组中超过一半的数。
 
-但是这种做法空间复杂度较高，有没有可能进行优化呢？ 答案就是用"投票算法"。
+符合直觉的做法是利用额外的空间去记录每个元素出现的次数，并用一个单独的变量记录当前出现次数最多的元素。但是这种做法空间复杂度较高，有没有可能进行优化呢？ 答案就是用"投票算法"。
 
-投票算法的原理是通过不断消除不同元素直到没有不同元素，剩下的元素就是我们要找的元素。
+投票算法的原理是通过不断**消除不同元素直到没有不同元素**，剩下的元素就是我们要找的元素。注意这里的关键是消除不同的数。
+
+背后的原理非常简单，即最坏的情况下非众数中的每一个数都和众数进行消除，那么剩下的是众数。其他情况则显然剩下的也是众数本身。
 
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlu7i1c8tj30mz0cjwfk.jpg)
+
 
 ## 关键点解析
 
