--- a/problems/229.majority-element-ii.md
+++ b/problems/229.majority-element-ii.md
@@ -49,13 +49,13 @@ https://leetcode-cn.com/problems/majority-element-ii/
 
 我们仍然可以采取同样的方法 - “摩尔投票法”， 具体的思路可以参考上面的题目。
 
-但是这里有一个不同的是这里的众数不再是超过`1 / 2`,而是超过`1 / 3`。
-题目也说明了，超过三分之一的有可能有多个（实际上就是 0，1，2 三种可能）。
+但是这里有一个不同的是这里的众数不再是超过`1 / 2`,而是超过`1 / 3`。题目也说明了，超过三分之一的有可能有多个
+
+> 实际上就是 0，1，2 三种可能。
 
 因此我们不能只用一个 counter 来解决了。 我们的思路是同时使用两个 counter，其他思路和上一道题目一样。
 
-最后需要注意的是两个 counter 不一定都满足条件，这两个 counter 只是出现次数最多的两个数字。
-有可能不满足出现次数大于 1/3， 因此最后我们需要进行过滤筛选。
+最后需要注意的是这两个 counter 只是出现次数最多的两个数字, 不一定都满足条件出现次数大于 1/3，因此最后我们需要进行过滤筛选。
 
 这里画了一个图，大家可以感受一下：
 
