--- a/problems/229.majority-element-ii.md
+++ b/problems/229.majority-element-ii.md
@@ -71,7 +71,7 @@ https://leetcode-cn.com/problems/majority-element-ii/
 
 ## 代码
 
-代码支持：CPP，JS, Java
+代码支持：CPP，JS, Java, Python
 
 CPP Code:
 
@@ -205,6 +205,38 @@ class Solution {
     }
 }
 
+```
+
+Python Code:
+
+```py
+
+class Solution:
+    def majorityElement(self, nums):
+        c1 = c2 = 0
+        v1 = v2 = -1
+
+        for num in nums:
+            if num == v1: c1 += 1
+            elif num == v2: c2 += 1
+            elif c1 == 0:
+                c1 = 1
+                v1 = num
+            elif c2 == 0:
+                c2 = 1
+                v2 = num
+            else:
+                c1 -= 1
+                c2 -= 1
+        # check
+        c1 = c2 = 0
+        for num in nums:
+            if v1 == num: c1 += 1
+            if v2 == num: c2 += 1
+        ans = []
+        if c1 > len(nums)//3: ans.append(v1)
+        if c2 > len(nums)//3: ans.append(v2)
+        return list(set(ans))
 ```
 
 **复杂度分析**
